--- a/widgets/CurrentSearchWidget/CurrentSearchWidget.css
+++ b/widgets/CurrentSearchWidget/CurrentSearchWidget.css
@@ -1,6 +1,7 @@
 #selection {
-  padding: 10px 15px 0;
+  padding: 10px 0px 0;
 }
-#selection li {
+#selection .item {
+  padding: 0px 15px 0;
   list-style-type: none;
 }
