First version of the home page Two MVC files, to be able to keep the original dataset alive Bugs corrected: PNG font color to black, Color by label super big

--- a/widgets/GraphWidget/GraphWidget.css
+++ b/widgets/GraphWidget/GraphWidget.css
@@ -9,6 +9,9 @@
 .graphNetwork .legend {
   pointer-events: none;
   font: 10px sans-serif;
+  font-weight:normal; 
+  stroke: #000; 
+  stroke-width: 0px;
 }
 .graphNetwork line.link {
 	stroke: #999;
@@ -21,3 +24,7 @@
 }
 
 .clearBoth { clear:both; }
+
+.graphNetwork .mainLegend{
+	font-size: 70%;
+}
