--- a/templates/template2/markup.html
+++ b/templates/template2/markup.html
@@ -1,6 +1,7 @@
 	<div id="wrap">
 		<header class="main">
 		<h1>{title}</h1>
+		<h2>{subtitle}</h2>
 		</header>
 		<div class="top">
 			<div class="left"></div>
