Bugs fixed: 	two instances of the same protein in the auto-complete widget 	no able to re-queried a protein after remove all New Features: 	Rules can now be discarded before applying 	proteins can go out of the borders previously imposed and can be seen by zooming

--- a/widgets/GraphWidget/GraphWidget.css
+++ b/widgets/GraphWidget/GraphWidget.css
@@ -17,7 +17,9 @@
 	stroke: #999;
 	stroke-opacity: .6;
 }
-
+.graphNetwork  svg{
+	background-color: #FBFBFB;
+}
 .graphNetwork  {
 	border: 1px solid #000;
 	background-color: #E5E5EF;
