--- a/widgets/SvgExporter/SvgExporter.css
+++ b/widgets/SvgExporter/SvgExporter.css
@@ -2,7 +2,7 @@
 	position:relative;
 	left:5px;
 	top:-74px;
-	width: 150px;
+	width: 220px;
 	height: 70px;
 	background-color: transparent;
 }
@@ -18,4 +18,56 @@
 .svgexporter img:active{
 	opacity:1.0;
 	filter:alpha(opacity=100); /* For IE8 and earlier */
+}
+
+.svgexporter div.share {
+	margin:4px auto;
+	float:left;
+	position:absolute;
+	left:-999em; /* Hides the drop down */
+	text-align:left;
+	padding:10px 5px 10px 5px;
+	
+	/* Gradient background */
+	background:#F4F4F4;
+
+	/* Rounded Corners */
+	-moz-border-radius: 0px 5px 5px 5px;
+	-webkit-border-radius: 0px 5px 5px 5px;
+	border-radius: 0px 5px 5px 5px;
+	top: -70px;
+}
+
+.svgexporter .share div.close {
+	background:url("images/close.png") no-repeat;
+	position: relative;
+	float: right;
+	opacity:0.7;
+	width: 20px;
+	height: 20px;
+	top:-20px;
+}
+.svgexporter .share header {
+	font-weight: bold;
+	color: #D10000;
+}
+.svgexporter .share div.close:hover {
+	opacity:1.0;
+	cursor:pointer;
+}
+
+.svgexporter .share li {
+	list-style-type: none;
+	padding-bottom: 5px;
+}
+.svgexporter .share .tocopy {
+	padding: 5px;
+	background-color: #F4F4F4;
+	width: 300px;
+	margin-right:15px;
+	font-size: 14px;
+	font-family: Arial;
+}
+.svgexporter .share .tocopy:hover {
+	background-color: #FFF0F0;
 }
