--- a/widgets/GraphWidget/GraphWidget.css
+++ b/widgets/GraphWidget/GraphWidget.css
@@ -18,7 +18,7 @@
 	stroke-opacity: .6;
 }
 .graphNetwork  svg{
-	background-color: #FBFBFB;
+	background-color: #FFF;
 }
 .graphNetwork  {
 	border: 1px solid #000;
