All the reported bugs in github up to #38 and some of the enhancement that are necessary

--- a/templates/template2/markup.html
+++ b/templates/template2/markup.html
@@ -1,8 +1,9 @@
 	<div id="wrap">
 		<header class="main">
+		<a href="{parent_link}"><img src="{logo}"/></a>
 		<h1>{title}</h1>
 		<h2>{subtitle}</h2>
-		</header>
+		</header><br class="clearBoth">
 		<div class="top">
 			<div class="left"></div>
 			<div class="middle"></div>
