--- a/pinv.css
+++ b/pinv.css
@@ -1,5 +1,6 @@
 header.main{
-	background-image:url("images/pinv/PINV_50.png");
+/*	background-image:url("images/pinv/PINV_50.png");
+*/
 	background-repeat:no-repeat;
 	height:50px;
 }
@@ -10,4 +11,18 @@ header.main{
 .item a {
 	color: #1f77b4;
 	text-decoration: none;
+}
+body>footer {
+	text-align: right;
+	font-size: 0.8em;
+	padding-bottom: 10px;
+	margin-top: 20px;
+	background: #ffffff; /* Old browsers */
+	background: -moz-linear-gradient(top, #ffffff 72%, #d10000 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(72%,#ffffff), color-stop(100%,#d10000)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #ffffff 72%,#d10000 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #ffffff 72%,#d10000 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #ffffff 72%,#d10000 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #ffffff 72%,#d10000 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#d10000',GradientType=0 ); /* IE6-9 */
 }
