--- a/templates/template2/style.css
+++ b/templates/template2/style.css
@@ -1,18 +1,25 @@
 body {
 	font-family: "Helvetica Neue", Helvetica, sans-serif;
+	margin-top:0px;
+	margin-bottom:0px;
+padding:0px;
 }
 header.main{
 	height:50px;
     min-width:900px;
 }
+header.main a{
+	float: left;
+}
 header.main h1{
+	margin-top:3px;
 	margin-left:60px;
 	font-family: 'Jura',"Helvetica Neue", Helvetica;
 	vertical-align:text-top;
 	font-size: 45px;
 }
 header.main h2{
-	margin-left:60px;
+	margin-left:85px;
 	font-family: 'Jura',"Helvetica Neue", Helvetica;
 	vertical-align:text-top;
 	font-size: 20px;
@@ -20,7 +27,7 @@ header.main h2{
 	color: #369;
 }
 .right {
-	width: 60%;
+	min-width: 50%;
 	float: left;
 	padding: 10px 20px 10px 40px;
 	border-left: 1px solid #aaa;
@@ -49,6 +56,7 @@ header.main h2{
 	padding: 0 0 10px 10px;
 	text-align: right;
     height: 8em;
+    min-width:240px;
 }
 .middle {
 	float: left;
@@ -56,11 +64,11 @@ header.main h2{
 	padding: 0 0 10px 10px;
 	text-align: right;
     height: 8em;
-    overflow: auto;
+    min-width:120px;
+	overflow: auto;
 }
 .left h2 {
   clear: left;
-  padding-top: 10px;
   margin-bottom: 0px;
   color: #333;
   font-size: 1.2em;
