--- a/widgets/RulerWidget/biojs.ruler.css
+++ b/widgets/RulerWidget/biojs.ruler.css
@@ -56,9 +56,11 @@
 	width:20px;
 	height:20px;
 	text-align:right;
-	background-image:url('images/close.png');
-	opacity:0.7;
+/*	background-image:url('images/close.png');
+*/	opacity:0.7;
+	font-size:1.5em;
 }
+.ruler .close:before{ content: "\2716"; }
 .ruler .close:hover{
 	opacity:1.0;
 	cursor:pointer;
@@ -113,7 +115,6 @@
 	font-size: 12px;
 	text-decoration: underline;
 	border: 0px ;
-	overflow: hidden;
 	-webkit-appearance: none;
 }
 .ruler .styled-select:hover {
