New Feature: Filters The queries can now contain a filter using the solr value fq. The filter can be defined on a dialog that uses the ruler component.

--- a/pinvIndex.css
+++ b/pinvIndex.css
@@ -5,6 +5,7 @@ body {
 }
 .invertedshiftdown {
 	border-top:0px;
+	text-align: center;
 }
 .invertedshiftdown a{
 	-moz-border-radius-topleft: 5px;
@@ -15,7 +16,9 @@ body {
 }
 
 .invertedshiftdown ul {
-	margin-left: 340px;
+	display: inline-block;
+	margin: 0;
+	padding: 0;
 }
 body>footer {
 	text-align: center;
