--- a/widgets/CurrentSearchWidget/CurrentSearchWidget.css
+++ b/widgets/CurrentSearchWidget/CurrentSearchWidget.css
@@ -5,3 +5,17 @@
   padding: 0px 15px 0;
   list-style-type: none;
 }
+#selection  span.tooltip {
+    z-index:10;
+    display:none; 
+    width:140px; 
+    line-height:16px;
+    text-align:center;
+}
+#selection  a:hover span.tooltip{
+    display:inline; position:absolute; color:#111;
+    border:1px solid #DCA; background:#fffAF0;}
+
+#selection  span:hover span.tooltip{
+    display:inline; position:absolute; color:#111;
+    border:1px solid #DCA; background:#fffAF0;}
