supporting resizing with empty values in the selected field

--- a/templates/template2/style.css
+++ b/templates/template2/style.css
@@ -28,7 +28,7 @@ header.main h2{
 }
 .right {
 	min-width: 50%;
-	float: left;
+/*	float: left;*/
 	padding: 10px 20px 10px 40px;
 	border-left: 1px solid #aaa;
 	text-align: justify;
