Adding the resizable behavior to the features pop-up. Also sorting those features.

--- a/widgets/DetailsFrameWidget/biojs.detailsFrame.css
+++ b/widgets/DetailsFrameWidget/biojs.detailsFrame.css
@@ -44,7 +44,7 @@ header.protein-label,header.protein-label a{
 	text-align: left;
 	padding: 0px;
 	margin: 0px;
-    height: 20em;
+    height: 90%;
     overflow: auto;
 }
 
