Adding a MD5 verification to the PHP script to avoid including twice the same dependecy Hiding the animate checkbox and the sort select, when its related component is not selected on the tabs.

--- a/widgets/HeatmapWidget/biojs.InteractionsheatmapD3.css
+++ b/widgets/HeatmapWidget/biojs.InteractionsheatmapD3.css
@@ -45,10 +45,17 @@ svg.heatmap_network  {
 	fill:#00ff00;
 	stroke: #000;
 	opacity:0.4;
+	stroke-width: 2;
 }
 .heatmap_network .legendBlock .button circle:hover{
 	opacity:1;
 }
 .heatmap_network .legendBlock .button path{
 	fill:url(#linearGradient);
+}
+.sort-select {
+	font-size: 16px;
+	border: 0px;
+	height: 28px;
+	margin: 0 0 2px 4px;
 }
