* Adding a wizzard to help the user on how to use pinv the first time * Upgrading to D3 v3 * Adding an option to the user to define the size of the frame

--- a/widgets/FewOptionsWidget/FewOptionsWidget.css
+++ b/widgets/FewOptionsWidget/FewOptionsWidget.css
@@ -10,6 +10,8 @@ margin-left: 20px; /*margin between first menu item and left browser edge*/
 margin-right: 20px; /*margin between first menu item and left browser edge*/
 padding: 0;
 list-style: none;
+display: inline-block;
+
 }
 
 .fewoptionswidget li{
