* Now selecting a protein in the network layout, add the class highlight to the node and includes a semi-transparent circle in the background  * Centered Labels in Network layout

--- a/widgets/GraphWidget/GraphWidget.css
+++ b/widgets/GraphWidget/GraphWidget.css
@@ -59,3 +59,14 @@ input[type="checkbox"]:checked + label {
 .indicator_on {
 	color: limegreen;
 }
+
+.graphNetwork .highlighter {
+	fill: #F7FF00;
+	opacity: 0.5;
+}
+.graphNetwork .selected text {
+	font-weight: bold;
+}
+.graphNetwork .selected path, .graphNetwork path.selected  {
+	stroke-width: 5;
+}
