The client now supports the information of clusters coming form the server. each cluster can be explode with double click.

--- a/widgets/GraphWidget/GraphWidget.css
+++ b/widgets/GraphWidget/GraphWidget.css
@@ -70,3 +70,7 @@ input[type="checkbox"]:checked + label {
 .graphNetwork .selected path, .graphNetwork path.selected  {
 	stroke-width: 5;
 }
+.graphNetwork .cluster path.figure{
+	fill: #eee;
+	stroke: #D10000;
+}
